Fix: Removed @Service from CustomStudentDetails.java